Bug 508418 - New selection effect: 16 px folder icons and overlays change color from Black to White for Breeze on selection
Summary: New selection effect: 16 px folder icons and overlays change color from Black...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 25.08.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-08-18 11:21 UTC by postix
Modified: 2025-09-16 09:06 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2025-08-18 11:21:43 UTC
STEPS TO REPRODUCE
1. Details View
2. Zoom out
3. Select an item

OBSERVED RESULT
The folder icon changes from black to white, while the text stays black.

EXPECTED RESULT
The folder icon stays black as it does for the other views


SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20250816
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.16.1-1-default (64-bit)
Graphics Platform: Wayland
Comment 1 postix 2025-08-18 11:23:07 UTC
- Compact view is also affected
- Symbol view is _not_ affected
Comment 2 postix 2025-08-18 18:55:58 UTC
I've noticed that folder overlays are also affected.
Comment 3 Akseli Lahtinen 2025-08-28 13:50:23 UTC
Can confirm, need to fix it.

Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.1
Kernel Version: 6.15.10-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 4 Bug Janitor Service 2025-09-01 11:53:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1038
Comment 5 Akseli Lahtinen 2025-09-02 10:08:02 UTC
Git commit 0573dce6d3d4056564b0d7e369f914fb81e83093 by Akseli Lahtinen.
Committed on 02/09/2025 at 08:51.
Pushed by meven into branch 'master'.

KStandardItemListWidget: Color icon only if item isPressed

Due to the new focus changes, our background highlights are more
transparent.
This means that the selected icon color is wrong, since
it's meant for fully opaque background

We should color the icon only when the element is pressed,
which is the only time we use fully opaque background.

M  +1    -1    src/kitemviews/kstandarditemlistwidget.cpp

https://invent.kde.org/system/dolphin/-/commit/0573dce6d3d4056564b0d7e369f914fb81e83093
Comment 6 Akseli Lahtinen 2025-09-16 09:06:13 UTC
Git commit 35831916f7e7a8463cb8eef476107ca667a1680c by Akseli Lahtinen.
Committed on 15/09/2025 at 09:13.
Pushed by akselmo into branch 'release/25.08'.

KStandardItemListWidget: Color icon only if item isPressed

Due to the new focus changes, our background highlights are more
transparent.
This means that the selected icon color is wrong, since
it's meant for fully opaque background

We should color the icon only when the element is pressed,
which is the only time we use fully opaque background.
(cherry picked from commit 0573dce6d3d4056564b0d7e369f914fb81e83093)

M  +1    -1    src/kitemviews/kstandarditemlistwidget.cpp

https://invent.kde.org/system/dolphin/-/commit/35831916f7e7a8463cb8eef476107ca667a1680c