KStandardItemListWidget: Color icon only if item isPressed

Due to the new focus changes, our background highlights are more
transparent.
This means that the selected icon color is wrong, since
it's meant for fully opaque background

We should color the icon only when the element is pressed,
which is the only time we use fully opaque background.

BUG: 508418
(cherry picked from commit 0573dce6d3d4056564b0d7e369f914fb81e83093)